--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,31 +10,38 @@
     tools:context=".MainActivity">
 
 
-
-    <Button
-        android:id="@+id/btnReset"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:paddingTop="100dp"
+        android:paddingLeft="35dp"
+        android:paddingBottom="40dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00b7cc"
-        android:paddingLeft="100dp"
-        android:paddingTop="20dp"
-        android:text="@string/restart_button"
-        android:textSize="20sp"
+        android:layout_gravity="center"
 
-        />
+        android:layout_height="wrap_content">
 
-    <Switch
-        android:id="@+id/swFlag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="100dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:showText="true"
-        android:text="@string/flag_switch"
-        android:textOff=""
-        android:textOn=""
-        android:textSize="25sp" />
+        <Button
+            android:id="@+id/btnReset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00b7cc"
+            android:text="@string/restart_button"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginRight="60dp"/>
+
+
+        <Switch
+            android:id="@+id/swFlag"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:showText="true"
+            android:text="@string/flag_switch"
+            android:textStyle="bold"
+            android:textOff=""
+            android:textOn=""
+            android:textSize="20sp" />
+    </LinearLayout>
 
     <wabash.minesweeper.MineSweeper.View.MineSweeperView
         android:id="@+id/mineSwView"
